--- a/src/css/style.css
+++ b/src/css/style.css
@@ -283,3 +283,19 @@ input[type="search"]::-webkit-search-cancel-button {
   font-size: 0.8rem;
   color: #666;
 }
+
+/* Target the scrollbar (vendor prefix for WebKit) */
+::-webkit-scrollbar {
+  width: 10px; /* Change '10px' to your desired width */
+  height: 5px;
+}
+
+/* Target the scrollbar track (optional) */
+::-webkit-scrollbar-track {
+  background-color: #F5F5F5; /* Change color as desired */
+}
+
+/* Target the scrollbar thumb (optional) */
+::-webkit-scrollbar-thumb {
+  background-color: #504b4b; /* Change color as desired */
+}
